[tool.poetry]
name = "nonebot-plugin-random-cat"
version = "0.1.0"
description = ""
authors = ["alphaAE <a1226123914@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.22.0"
httpx-socks = "^0.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
